Small fix for Dark Mode

--- a/src/sass/dark.scss
+++ b/src/sass/dark.scss
@@ -7,7 +7,7 @@
     color: #E9F2F9;
   }
   
-  .fab.fa-github.fa-2x {
+  .fa-github {
     color: #000000;
   }
 }
